<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MatchInformation">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="4dp"
        android:background="#FFC107"
        android:gravity="center"
        android:text="@string/Match_information"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutDetails"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/MatchNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MatchNumber" />

        <TextView
            android:id="@+id/RoundNumber"
            android:paddingTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RoundNumber" />

        <TextView
            android:id="@+id/DateUtc"
            android:paddingTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DateUtc" />

        <TextView
            android:id="@+id/Location"
            android:paddingTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Location" />

        <TextView
            android:id="@+id/HomeTeam"
            android:paddingTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HomeTeam" />

        <TextView
            android:id="@+id/AwayTeam"
            android:paddingTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AwayTeam" />

        <TextView
            android:id="@+id/Group"
            android:paddingTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Group" />

        <TextView
            android:id="@+id/HomeTeamScore"
            android:paddingTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HomeTeamScore" />

        <TextView
            android:id="@+id/AwayTeamScore"
            android:paddingTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AwayTeamScore" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>